--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "description": "",
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
+    "@types/cors": "^2.8.17",
+    "cor": "^0.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "faker": "^6.6.6",
@@ -22,6 +25,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
+    "stripe": "^17.3.1",
     "tsc-init": "^2.1.0",
     "uuid": "^11.0.3",
     "validator": "^13.12.0"
